# scSPIX_analysis

./: .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  LICENSE  README.md  flake.nix  main.nf  nextflow.config  pyproject.toml  strip_yml.py
.nextflow/: history
.venv-spix/: pyvenv.cfg
config/: README.md  base.config
container_def/spix/: Dockerfile  pyproject.toml  spix.def
container_def/stereopy/: Dockerfile  pyproject.toml  stereopy.def  stereopy.yml
container_def/visiumhd_zarr/: Dockerfile  pyproject.toml  visiumhd_zarr.def  visiumhd_zarr.yml
containers/spix/: Dockerfile  spix.def  spix.tar  spix_1007.yml
containers/stereopy/: Dockerfile  stereopy.def  stereopy.yml
containers/visiumhd_zarr/: Dockerfile
data/: README.md
envs/: README.md  spix_1007.yml
lib/: utils.nf
logs/: dag.dot  report.html  timeline.html  trace.txt
report/: README.md
uv-projects/spix/: pyproject.toml  requirements.txt
uv-projects/stereopy/: pyproject.toml  requirements.txt
uv-projects/visiumhd-zarr/: pyproject.toml  requirements.txt
workflows/: README.md  build_containers.nf  container_converter.nf  dwl_data.nf  stereo_analysis_workflow.nf  stereo_conversion.nf  visiumhd_analysis_workflow.nf
